refactor: simplify fluent waits and condition internals
Unify normal and diagnostic waits on Await with until/tryUntil, ordered
multi-condition captures and injectable time.

Support checked callbacks and immutable per-condition explanations, and
compose predicates or nested conditions within selections.

Keep condition execution and attempt history in their internal owners;
remove redundant state, wrappers and test fixture duplication.

Validation: ./gradlew check (308 tests, no failures).